force-app/main/default/objects/Ground_Service_Task__c/Ground_Service_Task__c.object-meta.xml
<CustomObject>
    <label>Ground Service Task</label>
    <nameField>
        <displayFormat>GST-{0000}</displayFormat>
        <label>Task Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ground Service Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>