force-app/main/default/objects/Ground_Service_Task__c/fields/Assigned_Crew__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Crew__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Crew</label>
    <referenceTo>Ground_Crew__c</referenceTo>
    <relationshipLabel>Ground Service Tasks</relationshipLabel>
    <relationshipName>Ground_Service_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>