force-app/main/default/objects/Ground_Service_Task__c/fields/Assigned_Time__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Time__c</fullName>
    <label>Assigned Time</label>
    <type>DateTime</type>
</CustomField>