force-app/main/default/objects/Ground_Service_Task__c/fields/Flight__c.field-meta.xml
<CustomField>
    <fullName>Flight__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Flight</label>
    <referenceTo>Flight__c</referenceTo>
    <relationshipLabel>Ground Service Tasks</relationshipLabel>
    <relationshipName>Ground_Service_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>