force-app/main/default/objects/Ground_Service_Task__c/fields/Task_Type__c.field-meta.xml
<CustomField>
    <fullName>Task_Type__c</fullName>
    <label>Task Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cleaning</fullName>
            </value>
            <value>
                <fullName>Refueling</fullName>
            </value>
            <value>
                <fullName>Catering</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>Baggage</fullName>
            </value>
            <value>
                <fullName>Boarding Support</fullName>
            </value>
            <value>
                <fullName>Pushback</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>