force-app/main/default/objects/Ground_Service_Task__c/validationRules/Completion_Notes.validationRule-meta.xml
<ValidationRule>
    <fullName>Completion_Notes</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Task_Status__c,&quot;Completed&quot;),
ISBLANK(Completion_Notes__c)
)</errorConditionFormula>
    <errorDisplayField>Completion_Notes__c</errorDisplayField>
    <errorMessage>Completion Notes are required when the task is completed.</errorMessage>
</ValidationRule>